<resources>
    <string name="app_name">Asteroid Radar</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_of_the_status">Status for Asteroid</string>
    <string name="image_of_the_day">Image of the Day</string>

    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="title_close_approach_data">Close approach date</string>
    <string name="title_absolute_magnitude">Absolute magnitude</string>
    <string name="title_estimated_diameter">Estimated diameter</string>
    <string name="title_relative_velocity">Relative velocity</string>
    <string name="info_text_help">Help Info Icon Image.</string>
    <string name="title_distance_from_earth">Distance from earth</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>

</resources>